# slimRDM

./: CHANGELOG.md  CLAUDE.md  README.md  TODO.md  Todo_Security.md  VERSION_BUMP.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: release-body.md
.github/workflows/: release.yml
docs/: Stretch goals.md
docs/superpowers/plans/: 2026-06-25-split-pane-revamp.md  2026-06-28-per-tab-splits-design.md  2026-06-30-session-logging-obsidian.md  2026-06-30-summarizer-obsidian-plugin.md  2026-07-01-summarizer-model-selector.md
docs/superpowers/specs/: 2026-06-25-split-pane-revamp-design.md  2026-06-30-claude-session-journal-design.md  2026-06-30-session-logging-obsidian-design.md  2026-06-30-summarizer-obsidian-plugin-design.md  2026-07-01-summarizer-model-selector-design.md  2026-07-02-persist-group-expansion-design.md
obsidian-plugin/slimrdm-summarizer/: README.md  SETUP.md  esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
obsidian-plugin/slimrdm-summarizer/scripts/: deploy.mjs
obsidian-plugin/slimrdm-summarizer/src/: main.ts  notes.ts  ollama-body.ts  ollama.ts  prompts.ts  settings.ts  summarizer.ts
obsidian-plugin/slimrdm-summarizer/test/: notes.test.ts  ollama.test.ts  prompts.test.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  session.rs  store.rs
src-tauri/src/commands/: categories.rs  claude_sessions.rs  clipboard.rs  connections.rs  credentials.rs  data.rs  groups.rs  known_hosts.rs  logging.rs  mod.rs  rdp.rs  ssh.rs  trm.rs  tunnel_utils.rs  tunnels.rs  updates.rs
src/components/modals/: AddConnectionModal.tsx  EditGroupModal.tsx  ReportIssueModal.tsx  SettingsModal.tsx  TunnelModal.tsx
src/components/session/: PaneHeader.tsx  SessionPanel.tsx  SessionTabs.tsx  SplitDivider.tsx
src/components/sidebar/: Sidebar.tsx  TunnelList.tsx
src/hooks/: useRdpCanvas.ts  useSshTerminal.ts  useTrmTerminal.ts
src/store/: appStore.ts  settingsStore.ts  toastStore.ts
src/types/: index.ts
src/utils/: appThemes.ts  linkHandler.ts  paneTree.ts  tauri.ts  terminalThemes.ts
