[package]
name = "slimrdm"
version = "0.1.0"
description = "SlimRDM - Lightweight RDP & SSH Client"
authors = ["SlimRDM"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "slimrdm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "slimrdm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
keyring = "2"
base64 = "0.22"

# SSH
russh = "0.44"
russh-keys = "0.44"

# RDP
ironrdp-client = { version = "0.1", optional = true }

[features]
default = ["ssh"]
ssh = []
rdp = ["ironrdp-client"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
