[package]
name = "slimrdm"
  version = "1.7.1"
description = "SlimRDM - Lightweight RDP & SSH Client"
authors = ["SlimRDM"]
license = "MIT"
repository = "https://github.com/GnomishGames/slimRDM"
edition = "2021"

[lib]
name = "slimrdm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "slimrdm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
keyring = "2"
base64 = "0.22"
sha2 = "0.10"
async-trait = "0.1"
lazy_static = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
regex = "1"
chrono = { version = "0.4", features = ["clock"] }

# SSH
russh = "0.44"
russh-keys = "0.44"

# Logging
log = "0.4"
env_logger = "0.11"

# RDP
ironrdp = { version = "0.14", features = ["connector", "session", "graphics", "pdu", "cliprdr", "core"] }
ironrdp-cliprdr = "0.5"
ironrdp-tokio = { version = "0.8", features = ["reqwest"] }
ironrdp-tls = { version = "0.2", features = ["rustls"] }
image = { version = "0.25", default-features = false, features = ["png"] }
smallvec = "1"
arboard = "3"

# Local terminal (TRM)
portable-pty = "0.8"

[features]
default = ["ssh"]
ssh = []

[patch.crates-io]
russh = { path = "vendor/russh" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
